# milvus-admin-ui

./: README.md
.github/workflows/: docker-publish.yml
mcp-server/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
mcp-server/context-forge/: register.json
mcp-server/src/mcp_milvus_server/: __init__.py  config.py  server.py
mcp-server/src/mcp_milvus_server/milvus/: client.py  safety.py
mcp-server/src/mcp_milvus_server/tools/: __init__.py  discovery.py  generation.py  search.py  validation.py
mcp-server/tests/: test_test_vectors.py  test_validation.py
