[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-milvus-server"
version = "1.0.0"
description = "Milvus MCP server for GitPilot (RAG, semantic search, vector code-gen)"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "GitPilot MCP Contributors" }]
dependencies = [
  "mcp>=1.23.0",
  "pymilvus>=2.4.6",
  "numpy>=1.26",
  "pydantic>=2.5.0",
  "pydantic-settings>=2.1.0",
  "structlog>=24.1.0",
  "uvicorn>=0.30.0",
  "starlette>=0.38.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
]

[project.scripts]
mcp-milvus-server = "mcp_milvus_server.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
